--- a/mb.html
+++ b/mb.html
@@ -131,7 +131,7 @@
         <div class="col-lg-6 offset-lg-1 wow fadeInRight">
           <h1 class="fw-light">Saad Bin Abdul Hai</h1>
           <h5 class="fg-theme mb-3">Computer System Analyst & Front-End Web Developer</h5>
-          <p class="text-muted">Experienced Computer System Analyst with a demonstrated history of working in the information technology and service industry. Have managed school and teaching institute's online campaign, worked on two different computer shops, worked as tech support & Computer System Analyst for over four years. Currently working as a freelance front-end web developer and learning more to achieve expertise in it.</p>
+          <p class="text-muted">This is Saad, a Web Developer and IT Support Specialist with a history of working in the information technology and service industry. I have always had natural problem-solving skills related to IT. Helping clients solve their technical issues and knowing that I've had a positive impact on someone each day is highly rewarding. I'm currently working as an IT Manager in a Teaching Institute.</p>
           <ul class="theme-list">
             <li><b>From:</b> Pabna, Bangladesh</li>
             <li><b>Lives In:</b> Rajshahi, Bangladesh</li>
