--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 }
 
 if (detectmob()){
-top.location.href="http://saadnahid.neocities.org/mb.html";
+top.location.href="http://saad7.me/mb.html";
 }
 </script>
 
