--- a/adel/index.html
+++ b/adel/index.html
@@ -140,7 +140,7 @@
                       Currently I am working on 8 projects for 2 years and big things are coming soon.
                     </p>
                     <p class="lead">
-                      I have done some projects in the field of software and technology. This is a list of some of the work that has been done World Directory A site that includes all languages and all that is needed by the tourist or resident in any country ww.world-guide.org another web is The site of Arab achievements contains all the achievements or talents, ideas, inventions, scientific books … and more www.arab-achievements.com
+                      I have done some projects in the field of software and technology. Some of them are world-guide.org; A site that includes all languages and all that is needed by the tourist or resident in any country. Another site is arab-achievements.com. It contains all the achievements or talents, ideas, inventions, scientific book and more.
                     </p>
                   </div>
                 </div>
