--- a/adel/index.html
+++ b/adel/index.html
@@ -140,7 +140,7 @@
                       Currently I am working on 8 projects for 2 years and big things are coming soon.
                     </p>
                     <p class="lead">
-                      I have done some projects in the field of software and technology. Some of them are world-guide.org; A site that includes all languages and all that is needed by the tourist or resident in any country. Another site is arab-achievements.com. It contains all the achievements or talents, ideas, inventions, scientific book and more.
+                      I have done some projects in the field of software and technology. Some of them are world-guide.org; A site that includes all languages and all that is needed by the tourist or resident in any country. Another site is arab-achievements.com. It contains all the achievements or talents, ideas, inventions, scientific book and more done by the Arabs.
                     </p>
                   </div>
                 </div>
