--- a/index.html
+++ b/index.html
@@ -20,8 +20,9 @@
   <title>Saad Bin Abdul Hai</title>
 
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-	
-	
+  <style>
+    a { text-decoration: none; }
+  </style>	
 
   <link rel="shortcut icon" href="./assets/s.png" type="image/x-icon">
   
@@ -141,7 +142,7 @@ top.location.href="http://saad7.me/mb.html";
         </div>
         <div class="col-lg-6 offset-lg-1 wow fadeInRight">
           <h1 class="fw-light">Saad Bin Abdul Hai</h1>
-          <h5 class="fg-theme mb-3">Computer System Analyst & Front-End Web Developer</h5>
+          <h5 class="fg-theme mb-3">IT Support Specialist & Front-End Web Developer</h5>
           <p class="text-muted">This is Saad, a Web Developer and IT Support Specialist with a history of working in the information technology and service industry. I have always had natural problem-solving skills related to IT. Helping clients solve their technical issues and knowing that I've had a positive impact on someone each day is highly rewarding. I'm currently working as an IT Manager in a Teaching Institute.</p>
           <ul class="theme-list">
             <li><b>From:</b> Pabna, Bangladesh</li>
@@ -248,8 +249,8 @@ top.location.href="http://saad7.me/mb.html";
             <li>
               <div class="title">2020 - Current</div>
               <div class="details">
-                <h5>Front-end Web Developer</h5>
-                <small class="fg-theme">Freelance</small>
+                <h5>IT Manager</h5>
+               <a> <small class="fg-theme">Contest University Admission Coaching</small> </a>
                 <p></p>
               </div>
             </li>
