--- a/index.html
+++ b/index.html
@@ -1,6 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+
+  <!-- <script>
+    function detectmob() {
+   if(window.innerWidth <= 800 || window.innerHeight <= 600) {
+     return true;
+   } else {
+     return false;
+   }
+}
+
+if (detectmob()){
+top.location.href="./mb.html";
+}
+</script> -->
+
+
 <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-QEQEW1E14B"></script>
 <script>
@@ -43,23 +59,6 @@
   <link rel="stylesheet" type="text/css" href="./assets/css/virtual.css">
   
   <link rel="stylesheet" type="text/css" href="./assets/css/topbar.virtual.css">
-
-
-
-<script>
-    function detectmob() {
-   if(window.innerWidth <= 800 || window.innerHeight <= 600) {
-     return true;
-   } else {
-     return false;
-   }
-}
-
-if (detectmob()){
-top.location.href="http://saad7.me/mb.html";
-}
-</script>
-
 
 </head>
 <body class="theme-red">  
@@ -127,7 +126,7 @@ top.location.href="http://saad7.me/mb.html";
     <div class="caption-header text-center wow zoomInDown">
       <h5 class="fw-normal">Welcome</h5>
       <h1 class="fw-light mb-4">I'm <b class="fg-theme">Saad</b> Bin Abdul Hai</h1>
-      <div class="badge">IT Support Specialist & Front-end Web Developer</div>
+      <div class="badge">IT Manager & Front-end Web Developer</div>
     </div> <!-- End Caption header -->
     <!-- <div class="floating-button"><span class="ti-mouse"></span></div> -->
   </div>
@@ -143,14 +142,14 @@ top.location.href="http://saad7.me/mb.html";
         <div class="col-lg-6 offset-lg-1 wow fadeInRight">
           <h1 class="fw-light">Saad Bin Abdul Hai</h1>
           <h5 class="fg-theme mb-3">IT Support Specialist & Front-End Web Developer</h5>
-          <p class="text-muted">This is Saad, a Web Developer and IT Support Specialist with a history of working in the information technology and service industry. I have always had natural problem-solving skills related to IT. Helping clients solve their technical issues and knowing that I've had a positive impact on someone each day is highly rewarding. I'm currently working as an IT Manager in a Teaching Institute.</p>
+          <p class="text-muted">An IT Support Specialist with a history of working in the information technology and service industry. I have always had natural problem-solving skills related to IT and working in the field of information technology is so much motivating for me. Helping clients solve technical issues and knowing that I've had a positive impact on someone each day is highly rewarding. I'm Presently completing my BBA at IBA, University of Rajshahi, and working part-time as an IT Manager at a Teaching Institute.</p>
           <ul class="theme-list">
             <li><b>From:</b> Pabna, Bangladesh</li>
             <li><b>Lives In:</b> Rajshahi, Bangladesh</li>
-            <li><b>Age:</b> 21</li>
+            <!-- <li><b>Age:</b> 21</li> -->
             <li><b>Gender:</b> Male</li>
           </ul>
-          <a href="https://drive.google.com/file/d/1owJ928kMFLUqIOemUNZ42jOJbmZl4ldi/view" class="btn btn-theme-outline" >View CV</a>
+          <a href="https://drive.google.com/file/d/1UQ5v3NDTTQUDktYMOGtQMaz4YuaK3hVx/view?usp=sharing" class="btn btn-theme-outline" >View CV</a>
         </div>
       </div>
     </div>
@@ -159,29 +158,29 @@ top.location.href="http://saad7.me/mb.html";
       <div class="row py-3">
         <div class="col-md-6">
           <div class="px-lg-3">
-            <h4 class="wow fadeInUp">Coding skills</h4>
+            <h4 class="wow fadeInUp">Academic Skills</h4>
             <div class="progress-wrapper wow fadeInUp">
-              <span class="caption">JavaScript</span>
-              <div class="progress">
-                <div class="progress-bar" role="progressbar" style="width: 25%;" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">Learning</div>
-              </div>
-            </div>
-            <div class="progress-wrapper wow fadeInUp">
-              <!-- <span class="caption">PHP</span>
-              <div class="progress">
-                <div class="progress-bar" role="progressbar" style="width: 80%;" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">80%</div>
-              </div> -->
-            </div>
-            <div class="progress-wrapper wow fadeInUp">
-              <span class="caption">HTML + CSS</span>
-              <div class="progress">
-                <div class="progress-bar" role="progressbar" style="width: 100%;" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">100%</div>
-              </div>
-            </div>
-            <div class="progress-wrapper wow fadeInUp">
-              <span class="caption">Python</span>
+              <span class="caption">Academic Research</span>
               <div class="progress">
                 <div class="progress-bar" role="progressbar" style="width: 75%;" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">75%</div>
+              </div>
+            </div>
+            <div class="progress-wrapper wow fadeInUp">
+              <span class="caption">Copy Writing</span>
+              <div class="progress">
+                <div class="progress-bar" role="progressbar" style="width: 92%;" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">92%</div>
+              </div>
+            </div>
+            <div class="progress-wrapper wow fadeInUp">
+              <span class="caption">Communication</span>
+              <div class="progress">
+                <div class="progress-bar" role="progressbar" style="width: 85%;" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">85%</div>
+              </div>
+            </div>
+            <div class="progress-wrapper wow fadeInUp">
+              <span class="caption">Critical thinking</span>
+              <div class="progress">
+                <div class="progress-bar" role="progressbar" style="width: 92%;" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">80%</div>
               </div>
             </div>
           </div>
@@ -189,6 +188,18 @@ top.location.href="http://saad7.me/mb.html";
         <div class="col-md-6">
           <div class="px-lg-3">
             <h4 class="wow fadeInUp">Technical Skills</h4>
+            <div class="progress-wrapper wow fadeInUp">
+              <span class="caption">Cloud/Web Applications</span>
+              <div class="progress">
+                <div class="progress-bar" role="progressbar" style="width: 90%;" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">99%</div>
+              </div>
+            </div>
+            <div class="progress-wrapper wow fadeInUp">
+              <span class="caption">Office Applications</span>
+              <div class="progress">
+                <div class="progress-bar" role="progressbar" style="width: 90%;" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">95%</div>
+              </div>
+            </div>
             <div class="progress-wrapper wow fadeInUp">
               <span class="caption">Windows System Analysis</span>
               <div class="progress">
@@ -201,12 +212,6 @@ top.location.href="http://saad7.me/mb.html";
                 <div class="progress-bar" role="progressbar" style="width: 80%;" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">80%</div>
               </div>
             </div>
-            <div class="progress-wrapper wow fadeInUp">
-              <span class="caption">Mac System Analysis</span>
-              <div class="progress">
-                <div class="progress-bar" role="progressbar" style="width: 60%;" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">60%</div>
-              </div>
-            </div>
           </div>
         </div>
       </div>
@@ -217,11 +222,11 @@ top.location.href="http://saad7.me/mb.html";
           <h2 class="fw-normal">Education</h2>
           <ul class="timeline mt-4 pr-md-5">
             <li>
-              <div class="title">2021 - Current</div>
+              <div class="title">2021 - Present</div>
               <div class="details">
                 <h5>BBA General</h5>
                 <small class="fg-theme">IBA, University of Rajshahi</small>
-                <!-- <p>Currently compleating my BBA here</p> -->
+                <!-- <p>Presently compleating my BBA here</p> -->
               </div>
             </li>
             <li>
@@ -243,30 +248,32 @@ top.location.href="http://saad7.me/mb.html";
             </li>
           </ul>
         </div>
+
+<!-- Experience Start Here         -->
         <div class="col-md-6 wow fadeInRight" data-wow-delay="200ms">
           <h2 class="fw-normal">Experience</h2>
           <ul class="timeline mt-4 pr-md-5">
             <li>
-              <div class="title">2020 - Current</div>
+              <div class="title">2021 - Present</div>
               <div class="details">
-                <h5>IT Manager</h5>
-               <a> <small class="fg-theme">Contest University Admission Coaching</small> </a>
+                <h5>IT & Marketing Manager</h5>
+               <a href="http://contestcoaching.rf.gd"> <small class="fg-theme">Contest University Admission Coaching</small> </a>
                 <p></p>
               </div>
             </li>
             <li>
-              <div class="title">2017 - 2020</div>
+              <div class="title">2020 - Present</div>
               <div class="details">
-                <h5>Android Development</h5>
+                <h5>Front-end Web Developer</h5>
                 <small class="fg-theme">Freelance</small>
                 <p></p>
               </div>
             </li>
             <li>
-              <div class="title">2015 - Current</div>
+              <div class="title">2021 - 22</div>
               <div class="details">
-                <h5>Computer System Analyst & Tech Support</h5>
-                <a href="https://www.linkedin.com/company/saadtechsupport"> <small class="fg-theme">Saad Tech Support</small></a>
+                <h5>IT & Marketing Manager</h5>
+                <a href="https://www.linkedin.com/company/yduofficialco/"> <small class="fg-theme">Youth Development Union</small></a>
                 <p></p>
               </div>
             </li>
@@ -300,7 +307,7 @@ top.location.href="http://saad7.me/mb.html";
               <span class="ti-search"></span>
             </div>
             <div class="caption">
-              <h4 class="fg-theme">Computer System Analyse and Fix</h4>
+              <h4 class="fg-theme">Computer System Diagnosis</h4>
               <p></p>
             </div>
           </div>
@@ -493,7 +500,7 @@ top.location.href="http://saad7.me/mb.html";
   </div> <!-- End testimonial -->
   
   <!-- Client -->
-  <div class="vg-page page-client">
+  <!-- <div class="vg-page page-client">
     <div class="container">
       <div class="row">
         <div class="col-md-6 col-lg-4 col-xl-3 item">
@@ -540,7 +547,7 @@ top.location.href="http://saad7.me/mb.html";
         </div>
       </div>
     </div>
-  </div> <!-- End client -->
+  </div> End client -->
   
   <!-- Blog 
   <div class="vg-page page-blog" id="blog">
