--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@ top.location.href="./mb.html";
         <div class="col-lg-6 offset-lg-1 wow fadeInRight">
           <h1 class="fw-light">Saad Bin Abdul Hai</h1>
           <h5 class="fg-theme mb-3">IT Support Specialist & Front-End Web Developer</h5>
-          <p class="text-muted">An IT Support Specialist with a history of working in the information technology and service industry. I have always had natural problem-solving skills related to IT and working in the field of information technology is so much motivating for me. Helping clients solve technical issues and knowing that I've had a positive impact on someone each day is highly rewarding. I'm Presently completing my BBA at IBA, University of Rajshahi, and working part-time as an IT Manager at a Teaching Institute.</p>
+          <p class="text-muted">An IT Support Specialist with a history of working in the information technology and service industry. I have always had natural problem-solving skills related to IT and working in the field of information technology is so much motivating for me. Helping clients solve technical issues and knowing that I've had a positive impact on someone each day is highly rewarding. I'm currently completing my BBA at IBA, University of Rajshahi, and working part-time as an IT Manager at a Teaching Institute.</p>
           <ul class="theme-list">
             <li><b>From:</b> Pabna, Bangladesh</li>
             <li><b>Lives In:</b> Rajshahi, Bangladesh</li>
