--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@ top.location.href="./mb.html";
     <!-- Navbar -->
     <div class="navbar navbar-expand-lg navbar-dark sticky" data-offset="500">
       <div class="container">
-        <a href="http://saadnahid.neocities.org/dork/" class="navbar-brand">Dork</a>
+        <a href="./dork/index.html" class="navbar-brand">Dork</a>
         <button class="navbar-toggler" data-toggle="collapse" data-target="#main-navbar" aria-expanded="true">
           <span class="ti-menu"></span>
         </button>
