--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@ top.location.href="./mb.html";
     <!-- Navbar -->
     <div class="navbar navbar-expand-lg navbar-dark sticky" data-offset="500">
       <div class="container">
-        <a href="./dork/" class="navbar-brand">Dork</a>
+        <a href="./dork/" class="btn btn-fab btn-theme no-shadow">Dork</a>
         <button class="navbar-toggler" data-toggle="collapse" data-target="#main-navbar" aria-expanded="true">
           <span class="ti-menu"></span>
         </button>
@@ -124,9 +124,9 @@ top.location.href="./mb.html";
     </div> <!-- End Navbar -->
     <!-- Caption header -->
     <div class="caption-header text-center wow zoomInDown">
-      <h5 class="fw-normal">Welcome</h5>
+      <h5 class="fw-normal">Hi</h5>
       <h1 class="fw-light mb-4">I'm <b class="fg-theme">Saad</b> Bin Abdul Hai</h1>
-      <div class="badge">IT Manager & Front-end Web Developer</div>
+      <div class="badge">IT Support Professional <br> (Android & Windows)</div>
     </div> <!-- End Caption header -->
     <!-- <div class="floating-button"><span class="ti-mouse"></span></div> -->
   </div>
@@ -141,7 +141,7 @@ top.location.href="./mb.html";
         </div>
         <div class="col-lg-6 offset-lg-1 wow fadeInRight">
           <h1 class="fw-light">Saad Bin Abdul Hai</h1>
-          <h5 class="fg-theme mb-3">IT Support Specialist & Front-End Web Developer</h5>
+          <h5 class="fg-theme mb-3">IT Support Professional <br> (Android & Windows)</h5>
           <p class="text-muted">An IT Support Specialist with a history of working in the information technology and service industry. I have always had natural problem-solving skills related to IT and working in the field of information technology is so much motivating for me. Helping clients solve technical issues and knowing that I've had a positive impact on someone each day is highly rewarding. I'm currently completing my BBA at IBA, University of Rajshahi, and working part-time as an IT Manager at a Teaching Institute.</p>
           <ul class="theme-list">
             <li><b>From:</b> Pabna, Bangladesh</li>
